Remove banner, add some submission information content.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">-->
 
   </head>
   <body>
@@ -21,23 +21,8 @@
         <p>Workshop in Live Programming 2013</p>
       </header>
 
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/liveprogramming/2013" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/liveprogramming/2013/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/liveprogramming/2013/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
+      
     <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
       <section>
         <p>Welcome to the official website for LIVE 2013, the Workshop on Live Programming. </p>
 
@@ -83,9 +68,10 @@ The workshop will be held on May XX, co-located with ICSE 2013 in San Francisco,
 
 <p>We solicit two kinds of submissions: live demos, and short talks with accompanying position papers. Submissions that receive the greatest number of recommendations by the program committee will be allocated 10 minutes during a morning session. All accepted submissions will have an accompanying public blog post. Authors also have the option to include their accepted submission in the workshop's official proceedings.</p>
 
-<p>TODO: easychair link
-TODO: guidance on submitting demos
-TODO: formatting, etc guidelines</p>
+<p>
+Please make your submission <a href="https://www.easychair.org/conferences/?conf=live2013">here</a>.  All submissions must conform at time of submission to the <a href="http://2013.icse-conferences.org/content/submission-guidelines">ICSE 2013 formatting and submission instructions</a>. 
+<!--TODO: guidance on submitting demos
+TODO: formatting, etc guidelines--></p>
 
 <h2>Schedule and Program</h2>
 
