Filling in some dates that were XX.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ works-in-progress. </p>
 talk sessions, and the remainder of the day will be in an unconference
 format. </p>
 
-<p>We invite submissions of demos or position papers broadly related to live programming. The submission deadline is XXX.
-The workshop will be held on May XX, co-located with ICSE 2013 in San Francisco, USA.</p>
+<p>We invite submissions of demos or position papers broadly related to live programming. The submission deadline is February 7, 2013.
+The workshop will be held on May 19, co-located with ICSE 2013 in San Francisco, USA.</p>
 
 <h2>What is live programming?</h2>
 
