Add live logo and intro section.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,19 @@
 
       <header>
         <h1>LIVE 2013</h1>
-        <p>Workshop in Live Programming 2013</p>
+        <p>Workshop on Live Programming 2013</p>
       </header>
-
       
-    <div class="wrapper">
+    <div class="wrapper">    
       <section>
-        <p>Welcome to the official website for LIVE 2013, the Workshop on Live Programming. </p>
-
+      <div>
+        <img class="logoflavor" src="images/LiveHalf.png">      
+        <!--Welcome to the official website for LIVE 2013, the Workshop on Live Programming.-->         
+        <p><em>Workshop on Live Programming 2013<br/>
+        Colocated with <a href="http://2013.icse-conferences.org/">35th International Conference on Software Engineering (ICSE 2013)</a><br/>
+         May 19, 2012, San Francisco, USA</em></p>
+	  </div>
+	  
 <h2>The short version</h2>
 
 <p>This workshop will focus on exploring notions and degrees of live programming as they relate to software development, creative activities, learning, and performance. </p>
