--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 			display: inline;
 		}
 		</style>
+		<title>LIVE 2013: Workshop on Live Programming</title>
 	</head>
 	<body>
 		<div id="content">
