--- a/live2013-logo.html
+++ b/live2013-logo.html
@@ -1,12 +1,15 @@
 <style>
-	text { fill: #FFE; font-size: 360px; font-weight: bold }
+	text { fill: #FFE; font-size: 340px; font-weight: bold }
+	rect.guide { fill: none; }
+	rect.guide { stroke: red; }
 </style>
 <body bgcolor="black">
-	<svg width="512" height="512" style="position:absolute;top:40;left:100">
-		<rect fill="#336" width="100%" height="100%"/>	
-		<g transform="translate(24,16) scale(0.914,0.914)">
-			<text x="0" y="256" >L</text>
-			<g transform="translate(0,0)">
+	<svg width="480" height="480" style="position:absolute;top:40;left:100">
+	<rect fill="#336" width="100%" height="100%"/>	
+		<g transform="scale(0.87,0.87)">
+		<g transform="translate(40,9)">
+			<text x="0" y="256">L</text>
+			<g transform="translate(-40,0)">
 				<text x="360" y="256" style="opacity:0.9" transform="rotate(  -0, 420,137)">I</text>
 				<text x="335" y="256" style="opacity:0.5" transform="rotate( -15, 395,137)">I</text>
 				<text x="310" y="256" style="opacity:0.4" transform="rotate( -30, 370,137)">I</text>
@@ -15,9 +18,14 @@
 				<text x="235" y="256" style="opacity:0.1" transform="rotate( -75, 295,137)">I</text>
 				<text x="210" y="256" style="opacity:0.1" transform="rotate( -90, 270,137)">I</text>
 				<text x="185" y="256" style="opacity:0.1" transform="rotate(-105, 245,137)">I</text>
-			</g>	
-			<text x="0" y="512" >V</text>
-			<text x="256" y="512" >E</text>
-		<g transform="translate(0,0)">
+			</g>
+		</g>		
+		<g transform="translate(40,5) ">
+			<text x="0" y="512">V</text>
+			<text x="256" y="512">E</text>
+		</g>
+		</g>
+		<rect class="guide" x="40" y="30" width="400" height="200" />
+		<rect class="guide" x="40" y="250" width="400" height="200" />
 	</svg>
-</body>	
+</body>
