--- a/index.html
+++ b/index.html
@@ -150,7 +150,22 @@
 
 			</section><section><h2>program_committee</h2>
 			
-			<p>TBA</p>
+			<ul>
+				<li>Andrew Begel, Microsoft Research</li>
+				<li>John Barton, IBM Research</li>
+				<li>Arie Van Deursen, Delft University of Technology</li>
+				<li>Andrew Ko, University of Washington</li>
+				<li>Margaret-Anne Storey, University of Victoria</li>
+				<li>Gilad Bracha, Cadence Design Systems</li>
+				<li>Brad Myers, Carnegie Mellon University</li>
+				<li>Zef Hemel, Cloud9 IDE, Inc.</li>
+				<li>Sam Aaron, Cambridge University</li>
+				<li>Alan Blackwell, Cambridge University</li>
+				<li>Oscar Nierstrasz, SCG - University of Bern</li>
+				<li>Felienne Hermans, Delft University of Technology</li>
+				<li>Jonathan Edwards, MIT</li>
+				<li>Shauvik Roy Choudhary, Georgia Institute of Technology</li>			
+			</ul>		
 			
 			</section>
 			
