--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				<li>How to apply live programming in non-audio-visual, possibly industrial domains?			
 			</ul>
 			
-			</section><section><h2>submission_guidelines</h2>
+			</section><section><h2><a id="submit">submission_guidelines</a></h2>
 			<p>We solicit two kinds of submissions<p>
 			<ul>
 				<li><b>Closed-Access Submissions:</b> Research papers (4 pages) that present novel research ideas and early results; and position papers (2 pages) that raise open issues with the potential to stimulate discussion at the workshop. Papers are peer-reviewed by the program committee and will be published behind the paywall of ICSE's academic publisher. If you are a scholar looking for a traditional publication, this is your submission format.</li>
