--- a/index.html
+++ b/index.html
@@ -130,9 +130,16 @@
 			
 			<p><b>Be a rebel:</b> Neglect these guidelines if you feel that your idea needs a special treatment in some way.</p>
 			
+
+		</section><section><h2>contest</h2>
+		
+		<p>
+			LIVE 2013 will award prizes ($500 for 1st) and complimentary registration for the best LIVE programming demos.  See details <a href="http://liveprogramming.github.com/2013/contest.html">here</a>.
+		</p>		
+		</section>
 			
 			
-		</section><section><h2>important_dates</h2>
+		<section><h2>important_dates</h2>
 		
 		<table style="margin: 24 auto 24 auto">
 			<tr><td>Research papers</td><td width="60%">Feb 7, 2013</td></tr>
