--- a/contest.html
+++ b/contest.html
@@ -65,7 +65,7 @@
 		<article>
 			
 			<section><h2>contest</h2>
-					LIVE 2013 will award 3 prizes for the best live programming demos.
+					<p>LIVE 2013 will award 3 prizes for the best live programming demos.</p>
 
 					<ul>
 						<li> The first prize will be $500 and complimentary registration.</li>
