--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		</section><section><h2>contest</h2>
 		
 		<p>
-			LIVE 2013 will award prizes ($500 for 1st) and complimentary registration for the best LIVE programming demos.  See details <a href="http://liveprogramming.github.com/2013/contest.html">here</a>.
+			LIVE 2013 will <a href="http://liveprogramming.github.com/2013/contest.html">award prizes</a> ($500 for 1st) and complimentary registration for the best LIVE programming demos.
 		</p>		
 		</section>
 			
