Update Zef's affiliation.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<li>Margaret-Anne Storey, University of Victoria</li>
 				<li>Gilad Bracha, Cadence Design Systems</li>
 				<li>Brad Myers, Carnegie Mellon University</li>
-				<li>Zef Hemel, Cloud9 IDE, Inc.</li>
+				<li>Zef Hemel, LogicBlox, Inc.</li>
 				<li>Sam Aaron, Cambridge University</li>
 				<li>Alan Blackwell, Cambridge University</li>
 				<li>Oscar Nierstrasz, SCG - University of Bern</li>
