Adding Chris Granger to PC.

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 				<li>John Barton, IBM Research</li>
 				<li>Arie Van Deursen, Delft University of Technology</li>
 				<li>Andrew Ko, University of Washington</li>
+				<li>Chris Granger, Light Table</li>
 				<li>Margaret-Anne Storey, University of Victoria</li>
 				<li>Gilad Bracha, Cadence Design Systems</li>
 				<li>Brad Myers, Carnegie Mellon University</li>
