Mention live programming in arts.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 				
 			<p>We want to leverage the current interest in live programming by bringing together researchers and practitioners to collaborate and learn from each other.</p>
 			
-			<p>The term "live programming" is a recent catchphrase for programming systems that abandon the traditional edit-compile-run cycle in favor of an instantaneous user experience with live feedback on a program's runtime behavior. Live programming is a quickly-developing topic being defined by practitioners and researchers with diverse backgrounds and interests. It received broad interest among professional software developers and software engineering researchers in the past year.</p>
+			<p>The term &ldquo;live programming&rdquo; is a recent catchphrase for programming systems that abandon the traditional edit-compile-run cycle in favor of an instantaneous user experience with live feedback on a program's runtime behavior. Live programming is a quickly-developing topic being defined by practitioners and researchers with diverse backgrounds and interests. It received broad interest among professional software developers and software engineering researchers in the past year.</p>
+			
+			<p>Meanwhile, under the radar of the software engineering community at-large, a nascent community has formed around the related idea of &ldquo;live coding&rdquo;&mdash;live audiovisual performances which use computers and algorithms as instruments. In contrast to the reflective, persistent nature of live programming precursors like LISP and Smalltalk, live coding emphasizes the ephemeral, reactive nature of live performance.</p>
 			
 			<p>The goal of this workshop is to focus on exploring notions and degrees of live programming as they relate to software development, creative activities, learning, and performance. We are interested in techniques, tools, demos, infrastructures, languages design insights, and questions that stimulate interest and understanding in live programming concepts.</p>
 				
