Update Gilad's affiliation.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<li>Andrew Ko, University of Washington</li>
 				<li>Chris Granger, Light Table</li>
 				<li>Margaret-Anne Storey, University of Victoria</li>
-				<li>Gilad Bracha, Cadence Design Systems</li>
+				<li>Gilad Bracha, Google</li>
 				<li>Brad Myers, Carnegie Mellon University</li>
 				<li>Zef Hemel, LogicBlox, Inc.</li>
 				<li>Sam Aaron, Cambridge University</li>
