John Barton affliation fix.

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 			
 			<ul>
 				<li>Andrew Begel, Microsoft Research</li>
-				<li>John Barton, IBM Research</li>
+				<li>John Barton, Google</li>
 				<li>Arie Van Deursen, Delft University of Technology</li>
 				<li>Andrew Ko, University of Washington</li>
 				<li>Chris Granger, Light Table</li>
