Sorted PC list.

--- a/index.html
+++ b/index.html
@@ -160,21 +160,21 @@
 			</section><section><h2>program_committee</h2>
 			
 			<ul>
-				<li>Andrew Begel, Microsoft Research</li>
-				<li>John Barton, IBM Research</li>
-				<li>Arie Van Deursen, Delft University of Technology</li>
-				<li>Andrew Ko, University of Washington</li>
-				<li>Chris Granger, Light Table</li>
-				<li>Margaret-Anne Storey, University of Victoria</li>
-				<li>Gilad Bracha, Cadence Design Systems</li>
-				<li>Brad Myers, Carnegie Mellon University</li>
-				<li>Zef Hemel, LogicBlox, Inc.</li>
-				<li>Sam Aaron, Cambridge University</li>
 				<li>Alan Blackwell, Cambridge University</li>
-				<li>Oscar Nierstrasz, SCG - University of Bern</li>
+				<li>Andrew Begel, Microsoft Research</li>
+				<li>Andrew Ko, University of Washington</li>
+				<li>Arie Van Deursen, Delft University of Technology</li>
+				<li>Brad Myers, Carnegie Mellon University</li>
+				<li>Chris Granger, Kodowa</li>
 				<li>Felienne Hermans, Delft University of Technology</li>
+				<li>Gilad Bracha, Cadence Design Systems</li>
+				<li>John Barton, IBM Research</li>
 				<li>Jonathan Edwards, MIT</li>
+				<li>Margaret-Anne Storey, University of Victoria</li>
+				<li>Oscar Nierstrasz, University of Bern</li>
+				<li>Sam Aaron, Cambridge University</li>
 				<li>Shauvik Roy Choudhary, Georgia Institute of Technology</li>			
+				<li>Zef Hemel, Logicblox</li>
 			</ul>		
 			
 			</section>
