Fixed a typo (missing "and" word).

--- a/contest.html
+++ b/contest.html
@@ -31,7 +31,7 @@
 				<ul>
 					<li> The first prize will be $500 and complimentary registration.</li>
 					<li> The second prize will be $150 and complimentary registration.</li>
-					<li> The third prize will be $50 complimentary registration.</li>
+					<li> The third prize will be $50 and complimentary registration.</li>
 				</ul>
 				
 				<p>To submit, participants should send an url of a running demo or a video, and a blog post describing the demo by April 4th.  For videos, please running time to under seven minutes.</p>
