Update team.  I thought we did this already?

--- a/contest.html
+++ b/contest.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<link href="live.css" rel="stylesheet" type="text/css">
-	<title>LIVE 2013: Workshop on Live Programming</title>
+	<title>LIVE 2013: Workshop on Live Programming Contest</title>
 </head>
 <body>
 	
