--- a/team.html
+++ b/team.html
@@ -49,8 +49,8 @@
 				<li>Brad Myers, Carnegie Mellon University</li>
 				<li>Chris Granger, Kodowa</li>
 				<li>Felienne Hermans, Delft University of Technology</li>
-				<li>Gilad Bracha, Cadence Design Systems</li>
-				<li>John Barton, IBM Research</li>
+				<li>Gilad Bracha, Google</li>
+				<li>John Barton, Google</li>
 				<li>Jonathan Edwards, MIT</li>
 				<li>Margaret-Anne Storey, University of Victoria</li>
 				<li>Oscar Nierstrasz, University of Bern</li>
