--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
 					Follow us on <a href="http://twitter.com/liveprog2013">@liveprog2013</a>
 				</p>
 				<hr/>
+				<footnav>
+					<ul class="bar">
+						<li><span>Supported By:</span></li>
+						<li><a href="http://toplap.org"><img src="toplap-crop.png"></img></a>
+						<li><a href="http://www.interaction-design.org/"><img src="logo_05_b_illustrationTwoOnARow.jpg"></img></a>
+					</ul>
+				</footnav>
 			</div>
 		</footer>
 
