--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 				<div class="wrapper">
 					<ul class="bar">
 						<li><a href="about.html">about</a></li>
-						<li><a href="cfp.html">submissions</a></li>
+						<li><a target="#" href="http://liveprogramming.github.com/liveblog/">blog</a></li>
 						<li><a href="contest.html">contest</a></li>
+						<li><a href="cfp.html">submissions</a></li>
 						<li><a href="register.html">register</a></li>
 				    </ul>	
 					<ul>
