Fix missing blog link and make consistent ordering of header links. + Accepted papers with program!

--- a/about.html
+++ b/about.html
@@ -11,8 +11,10 @@
 			<div class="wrapper">
 				<ul class="bar">
 					<li class="active">about</li>
-					<li><a href="cfp.html">submissions</a></li>
+					<li><a target="#" href="http://liveprogramming.github.com/liveblog/">blog</a></li>
 					<li><a href="contest.html">contest</a></li>
+					<li><a href="cfp.html">submit</a></li>
+					<li><a href="program.html">program</a></li>
 					<li><a href="register.html">register</a></li>
 			    </ul>	
 				<ul class="home">
