--- a/cfp.html
+++ b/cfp.html
@@ -11,8 +11,10 @@
 			<div class="wrapper">
 				<ul class="bar">
 					<li><a href="about.html">about</a></li>
-					<li class="active">submissions</li>
+					<li><a target="#" href="http://liveprogramming.github.com/liveblog/">blog</a></li>
 					<li><a href="contest.html">contest</a></li>
+					<li class="active">submit</li>
+					<li><a href="program.html">program</a></li>
 					<li><a href="register.html">register</a></li>
 			    </ul>	
 				<ul class="home">
