--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 						<li><a href="about.html">about</a></li>
 						<li><a target="#" href="http://liveprogramming.github.com/liveblog/">blog</a></li>
 						<li><a href="contest.html">contest</a></li>
-						<li><a href="cfp.html">submissions</a></li>
+						<li><a href="cfp.html">submit</a></li>
+						<li><a href="program.html">program</a></li>
 						<li><a href="register.html">register</a></li>
 				    </ul>	
 					<ul>
