--- a/register.html
+++ b/register.html
@@ -11,8 +11,10 @@
 			<div class="wrapper">
 				<ul class="bar">
 					<li><a href="about.html">about</a></li>
-					<li><a href="cfp.html">submissions</a></li>
+					<li><a target="#" href="http://liveprogramming.github.com/liveblog/">blog</a></li>
 					<li><a href="contest.html">contest</a></li>
+					<li><a href="cfp.html">submit</a></li>
+					<li><a href="program.html">program</a></li>
 					<li class="active">register</li>
 			    </ul>	
 				<ul class="home">
