Added missing words.

--- a/contest.html
+++ b/contest.html
@@ -36,7 +36,7 @@
 					<li> The third prize will be $50 and complimentary registration.</li>
 				</ul>
 				
-				<p>To submit, participants should send an url of a running demo or a video, and a blog post describing the demo by April 4th.  For videos, please running time to under seven minutes.</p>
+				<p>To submit, participants should send an url of a running demo or a video, and a blog post describing the demo by April 4th.  For videos, please limit the running time to under seven minutes.</p>
 				
 				<p>Submissions and questions should be emailed to </br>
 				<a href="mailto:chris.parnin@gatech.edu">chris.parnin@gatech.edu</a></p>
