Update registration information. Strike out passed deadlines.

--- a/cfp.html
+++ b/cfp.html
@@ -49,8 +49,8 @@
 
 				<p>
 				<table style="margin: 24 auto 24 auto; width: 100%">
-					<tr><td>Research papers</td><td width="60%">Feb 7, 2013</td></tr>
-					<tr><td>Other submissions</td><td>April 4, 2013</td></tr>
+					<tr><td>Research papers</td><td width="60%"><strike>Feb 7, 2013</strike></td></tr>
+					<tr><td>Other submissions</td><td><strike>April 4, 2013</strike></td></tr>
 					<tr><td>Workshop</td><td>May 19, 2013</td></tr>
 				</table>			
 				</p>
