--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 					<p>We solicit papers and live demos, authors may choose between open access and paywalled submissions.<p>
 					<p>Important dates are,
 					<ul>
-						<li>Paper due Feb 7, and</li>		
-						<li>Demos due April 4.</li>
+						<li><strike>Paper due Feb 7</strike>, and</li>		
+						<li><strike>Demos due April 4</strike>.</li>
 					</ul>	
 					</p>
 					<p><a href="cfp.html" class="readmore">View call for papers &rArr;</a></p>
