--- a/register.html
+++ b/register.html
@@ -30,23 +30,10 @@
 			<section>
 			<h3>registration</h3>
 			
-			<p>No tickets yet&mdash;please subscribe for pre-registration.</p>
-			<div>
-			<style type="text/css">
-				form {background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-				input.email {display:inline; padding:8px 0; margin:0 4% 10px 0; text-indent:5px; width:58%; min-width:130px;}
-				input.button {display:inline; width:35%; margin:0 0 10px 0; min-width:90px;}
-				input {border:1px solid #999; -webkit-appearance:none;}
-				input:focus {border-color:#333;}
-				.button {clear:both; background-color: #aaa; border: 0 none; border-radius:4px; color: #FFFFFF; cursor: pointer; display: inline-block; font-size:15px; font-weight: bold; height: 32px; line-height: 32px; margin: 0 5px 10px 0; padding:0; text-align: center; text-decoration: none; vertical-align: top; white-space: nowrap; width: auto;}
-			</style>
-			<form action="http://github.us6.list-manage.com/subscribe/post?u=b048f8af07d34a0faff4c7613&amp;id=369c14ef5c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-				<input type="submit" value="Preregister for Tickets" name="subscribe" id="mc-embedded-subscribe" class="button">
-			</form>
-			</div>
-			</p>
-			
+			<p><strong>Early bird registration deadline is April 14&mdash;prices increase a bit after that!</strong><p>
+
+			<p>Registration is open! You can sign up for the workshop through the <a href="https://regmaster3.com/2013conf/ICSE13/register.php">
+			   registration site</a>. Price information for early bird, student, and registration of other events is <a href="http://2013.icse-conferences.org/content/registration">available on the ICSE website.</a></p>
 			</section>	
 		</div>
 	</article>	
