Added notice regarding discount for startups and artists.

--- a/register.html
+++ b/register.html
@@ -32,8 +32,13 @@
 			
 			<p><strong>Early bird registration deadline is April 14&mdash;prices increase a bit after that!</strong><p>
 
-			<p>Registration is open! You can sign up for the workshop through the <a href="https://regmaster3.com/2013conf/ICSE13/register.php">
-			   registration site</a>. Price information for early bird, student, and registration of other events is <a href="http://2013.icse-conferences.org/content/registration">available on the ICSE website.</a></p>
+
+				<p>&rArr; <a href="https://regmaster3.com/2013conf/ICSE13/register.php">LIVE 2013, Regsiter now!</a></p>
+
+			<p>Registration is open! Price information is <a href="http://2013.icse-conferences.org/content/registration">available on the ICSE website.</a></p>
+				 
+			<p>Not backed up by big corporate money, and registration prices are the only thing holding you back from attending? Please <a href="team.html">chat with us</a> to find a solution, we are very commited to connecting academia and practicioners from both startups and the artistic community!
+				 
 			</section>	
 		</div>
 	</article>	
