--- a/team.html
+++ b/team.html
@@ -33,7 +33,7 @@
 			
 			<ul>
 				<li>Brian Burg, University of Washington</li>
-				<li>Adrian Kuhn, University of British Columbia</li>	
+				<li><a href="http://twitter.com/akuhn">Adrian Kuhn</a> (<a href="mailto:akuhnplus+live2013@gmail.com">email</a>), University of British Columbia</li>	
 				<li>Chris Parnin, Georgia Tech</li>	
 			</ul>		
 
