--- a/register.html
+++ b/register.html
@@ -43,7 +43,7 @@
 			<section>
 			<h3>faq</h3>
 				 
-			<p>Not backed up by big corporate money, and registration prices are the only thing holding you back from attending? Please <a href="team.html">chat with us</a> to find a solution! We are very commited to building bridges between academia and practicioners from both startups and the artistic community.
+			<p>Not backed up by a big budget, and registration prices are the only thing holding you back from attending? Please <a href="team.html">chat with us</a> to find a solution! We are very commited to building bridges between academia and practicioners from both startups and the artistic community.
 				 
 			</section>	
 		</div>
