Clarifying one-day conference versus one-day workshop registration.

--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
 			
 			<p><strong>Early bird deadline is April 14&mdash;hurry up!</strong><p>
 
-				<p>Registration is open. LIVE is collocated with ICSE, you'll thus have to register through the link provied below. During registration you may skip page 2 but make sure to tick the checkbox for LIVE on page 3. Price information is <a href="http://2013.icse-conferences.org/content/registration">available on the ICSE website.</a> <small></p>
+				<p>Registration is open. LIVE is collocated with ICSE, you'll thus have to register through the link provied below. During registration skip page 2, skipping the one-day conference option, and make sure to tick the checkbox for LIVE on page 3 under one-day workshops. Price information is <a href="http://2013.icse-conferences.org/content/registration">available on the ICSE website</a> (under one-day workshops) <small></p>
 
 				<p>&rArr; <a href="https://regmaster3.com/2013conf/ICSE13/register.php">LIVE 2013, Register now!</a></p>
 				
