Could use an overview.

--- a/program.html
+++ b/program.html
@@ -28,6 +28,8 @@
 		<div class="wrapper">
 		<section>
 
+<h3>overview</h3>
+
 <p>LIVE 2013 will feature a plenary session, two paper and demo sessions, and a final session for a "birds of a feather" (BOF) activity.</p>
 
 <p>Talks will be presented in fast-pased and engaging Pecha Kucha style, organized in a thematic group with joint discussion at the end.</p>
