Fixing 404 on paper.

--- a/program.html
+++ b/program.html
@@ -98,7 +98,7 @@ Workshop organizers will cluster BOF sticky notes and prepare topic groups.</p>
 <li><a href="http://www.youtube.com/watch?v=X3z-uFNYxyQ">Live Mashup Tools: Challenges and Opportunities</a> &ndash; #hypercard #media</li>
 <li>SOMETHINGit: A Prototyping Library for Live and Sound Improvisation &ndash; #language</li>
 <li><a href="https://vimeo.com/63351900">[DEMO]</a> Nouns &ndash; #IDE #graphics</li>
-<li><a href="http://avocadojs.com/">[DEMO]</a> <a href="/live2013/papers/avocado.pdf">Avocado: Programming JavaScript in a Self-ish Environment</a> &ndash; #IDE #UI</li>
+<li><a href="http://avocadojs.com/">[DEMO]</a> <a href="/2013/papers/avocado.pdf">Avocado: Programming JavaScript in a Self-ish Environment</a> &ndash; #IDE #UI</li>
 </ul>
 
 
