--- a/program.html
+++ b/program.html
@@ -96,7 +96,7 @@ Workshop organizers will cluster BOF sticky notes and prepare topic groups.</p>
 <ul>
 <li><a href="http://www.youtube.com/watch?v=X3z-uFNYxyQ">Live Mashup Tools: Challenges and Opportunities</a> &ndash; #hypercard #media</li>
 <li><a href="/2013/papers/livesoundness.pdf ">SOMETHINGit: A Prototyping Library for Live and Sound Improvisation"</a> &ndash; #language #soundness</li>
-<li><a href="https://vimeo.com/63351900">[DEMO]</a> <a href="http://brow.github.com/nouns/">Nouns</a> &ndash; #IDE #graphics</li>
+<li><a href="https://vimeo.com/63351900">[DEMO]</a> <a href="http://tombrow.com/noise">Noise: Human-readable graphics language</a> &ndash; #IDE #graphics</li>
 <li><a href="http://avocadojs.com/">[DEMO]</a> <a href="/2013/papers/avocado.pdf">Avocado: Programming JavaScript in a Self-ish Environment</a> &ndash; #IDE #UI</li>
 </ul>
 
