live logic paper.

--- a/program.html
+++ b/program.html
@@ -84,7 +84,7 @@ Workshop organizers will cluster BOF sticky notes and prepare topic groups.</p>
 <p><strong> Visions / Language </strong></p>
 
 <ul>
-<li>Live Logic Programming &ndash; #language #vision</li>
+<li><a href="/2013/papers/livelogic.pdf">Live Logic Programming</a> &ndash; #language #vision</li>
 <li><a href="/2013/papers/semanticliveness.pdf">Semantic Deltas for Live DSL Environments</a> &ndash; #vision #language #softeng</li>
 <li><a href="/2013/papers/challenges.pdf">Challenges in building live programming environments for general purpose programming</a> &ndash; #vision</li>
 <li><a href="/2013/papers/moon.pdf">Co-Evolution as the Key for Live Programming</a> &ndash; #IDE #language</li>
