--- a/program.html
+++ b/program.html
@@ -125,8 +125,9 @@ Workshop organizers will cluster BOF sticky notes and prepare topic groups.</p>
 </ul>
 
 
-<h3>Dinner, TBA</h3>
-
+<h3>Dinner, <a href="http://www.henryshunanrestaurant.com/locations-san-francisco.html">Henry's Hunan Restaurant</a> </h3>
+<p>Meet 6:45pm at lobby</p>
+<p>924 Sansome St, San Francisco, CA 94111</p>
 
 		</section>
 		</div>
